feat: migrate Jackson 2.x to 3.x and fix desensitization
- Migrate all 30+ Java files from com.fasterxml.jackson to tools.jackson
- Replace Jackson 2.x APIs: JsonSerializer→ValueSerializer, SerializerProvider→SerializationContext, BeanSerializerModifier→ValueSerializerModifier
- Use JsonMapper.builder() for immutable ObjectMapper configuration (Jackson 3.x)
- Rewrite DesensitizeSerializer/DesensitizeValueSerializerModifier with Jackson 3.x API
- Register desensitize module via SecurityAutoConfiguration for auto-discovery
- Remove manual DesensitizeUtil calls in EntityDemoService (auto desensitization)
- Delete JacksonConfiguration (Spring Boot 4.0.6 auto-configures ObjectMapper)
- Add JacksonAutoConfiguration for custom serializers module registration
- Fix CORS for actuator endpoints with high-priority CORS filter
- Add /api/monitor/health endpoint with UP/DOWN status and thread pool info
- Add /actuator/systemResources endpoint with CPU/memory/disk metrics
- Fix Sa-Token auth: OPTIONS skip, white-list, @Primary SaTokenConfig bridge
- Fix TraceId propagation through error dispatch paths